[package]
name = "yolol-runner"
version = "0.2.2"
edition = "2018"
license-file = "LICENSE"
description = "lib for parsing and running yolol script"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"yolol-devices" = "0.3.3"
"peg" = "0.7.0"
lazy_static = "1.4.0"
parking_lot = "0.11.1"
mimalloc =  { version = "0.1.26", default-features = false }
core_affinity = "0.5.10"
walkdir = "2"

[profile.release]
debug = 1
codegen-units = 1